--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,10 +2,10 @@ spring:
   application:
     name: payment
   datasource:
-    url: jdbc:mysql://146.148.109.95:3306/PaymentDatabase?createDatabaseIfNotExist=true&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/PaymentDatabase?createDatabaseIfNotExist=true&serverTimezone=UTC
     driver-class-name: com.mysql.jdbc.Driver
-    username: dev
-    password: dev
+    username: root
+    password:
   jpa:
     hibernate:
       ddl-auto: create
@@ -14,4 +14,4 @@ spring:
     show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
+        dialect: org.hibernate.dialect.MySQLDialect
